--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^4.18.2",
-        "node-fetch": "^3.3.2",
+        "node-fetch": "2",
         "nodemon": "^3.0.1",
         "xml2js": "^0.6.2"
     },
